--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>no.ntnu.idata</groupId>
-    <artifactId>exam</artifactId>
+    <artifactId>10033</artifactId>
     <version>1.0-SNAPSHOT</version>
 
 
