--- a/pom.xml
+++ b/pom.xml
@@ -41,6 +41,12 @@
             <version>2.7.6</version>
         </dependency>
 
+        <dependency>
+            <groupId>jakarta.persistence</groupId>
+            <artifactId>jakarta.persistence-api</artifactId>
+            <version>2.2.3</version>
+        </dependency>
+
         <!--Junit testing dependencies-->
         <dependency>
             <groupId>org.junit.jupiter</groupId>
